--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         </div>
       </div>
     </div>
-    <div class="image-container">
+    <picture class="image-container">
       <img src="images/image-header-desktop.jpg" class="img-desktop">
       <img src="images/image-header-mobile.jpg" class="img-mobile">
       <div class="purple"></div>
-    </div>
+    </picture>
   </main>
 
   <footer class="footer">
